2002-09-25  Mikhael Goikhman  <migo@homemail.com>

	* screenshots/make-thumb.sh:
	several changes, create jpg thumbs, suggest several contrast variants

	* screenshots/*:
	replaced Mikhael and Windows95 images;
	replaced xv-resized gifs with convert-resized jpgs

2002-09-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.10

2002-09-17  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Add link to freshmeat for CDEmu.

2002-09-17  Mikhael Goikhman  <migo@homemail.com>

	* generated/perllib/perllib2html:
	* generated/perllib/*.html:
	a new script for generating perl library documentation on the web;
	initially generated man pages

	* modules.html:
	added a link to perllib documentation

	* generated/manpages/manpages2html:
	replaced the old run_man2html
	* generated/manpages/*.html:
	regenerated all 2.4.x manpages, added new 2.5.x pages (not linked)

2002-09-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.10

2002-09-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	clarified stability of current devel versions

2002-08-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.5.3

2002-08-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.4.9

2002-08-10  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/*.html:
	regenerated man pages

2002-07-22  Bob Woodside  <dumbledore@woodsway.com>

	* links.html:
	Dropped link to "Bob Woodside's Miscellaneous patches page" -
        it's dead, Jim.

2002-07-22  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Comments for Remko's screenshot.

2002-07-20  Dan Espen  <dane@mk.telcordia.com>

	* index.html: More typos, add a little FVWM promo.

2002-07-20  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	disabled NEWS FLASH, corrected a typo in it
