@@ -1,3 +1,8 @@
+2002-09-25  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* mod_m2f_communication.html:
+	corrected a typo
+
 2002-09-25  Mikhael Goikhman  <migo@homemail.com>
 
 	* screenshots/make-thumb.sh:
